--- a/ms/templates/booking/needs.html
+++ b/ms/templates/booking/needs.html
@@ -94,8 +94,23 @@
 					<font style="width:380px;">NUMBER OF HOURS RECOMMENDED</font>
 				</li>
 				<li class="ne-li-2">
-					{{ form.hour }}
-					{{ form.hour.errors }}
+					<select id="id_hour" name="hour">
+						<option value="3" selected="selected">3 hours</option>
+						<option value="3.5">3.5 hours</option>
+						<option value="4">4 hours</option>
+						<option value="4.5">4.5 hours</option>
+						<option value="5">5 hours</option>
+						<option value="5.5">5.5 hours</option>
+						<option value="6">6 hours</option>
+						<option value="6.5">6.5 hours</option>
+						<option value="7">7 hours</option>
+						<option value="7.5">7.5 hours</option>
+						<option value="8">8 hours</option>
+						<option value="8.5">8.5 hours</option>
+						<option value="9">9 hours</option>
+						<option value="9.5">9.5 hours</option>
+						<option value="10">10 hours</option>
+					</select>
 				</li>
 				<li class="ne-li-3"><h3>SPECIAL INSTRUCTIONS</h3></li>
 				<li class="ne-li-3 msg-char">
