--- a/ms/templates/cn/home/index.html
+++ b/ms/templates/cn/home/index.html
@@ -7,7 +7,7 @@
 <div class="carousel slide bigeye">
   <ul class="carousel-inner">
     <li class="item active">
-      <img src="/static/img/s1.jpg" alt="image 1">
+      <img src="/static/img/s1.png" alt="image 1">
     </li>
     <li class="item">
       <img src="/static/img/s2.png" alt="image 2">
@@ -21,9 +21,9 @@
 	<div class="book-container">
 		<div class="welcome-area">
 			<div class="blk-middle">
-				<h1>WANT A CLEAN HOME?</h1>
-				<p>BOOK ONLINE or CALL FOR ENGLISH SERVICE <font>021-6380-1553</font></p>
-				<a href="#mark-1" class="btn btn-contrast btn-large how-it-works">HOW IT WORKS</a>
+				<h1>给您一个整洁的家</h1>
+				<p>网上预订或拨打服务电话 <font>021-6380-1553</font></p>
+				<a href="#mark-1" class="btn btn-contrast btn-large how-it-works">服务流程</a>
       		</div>
 		</div>
 		<div class="set-area">
@@ -41,7 +41,7 @@
       			<div class="input-group time-div">
 	      			<input type="text" class="type-box" readonly="readonly" value="One Time">
       			</div>
-            	<button id="clean-book" type="submit">BOOK NOW</button>
+            	<button id="clean-book" type="submit">现在预订</button>
             </form>
       		</div>
 		</div>
@@ -51,18 +51,18 @@
 	<ul>
 		<li>
 			<img src="/static/img/f1.png" alt="feature" />
-			<p>100% Satisfaction Guarantee</p>
-			<font class="poptip" data-toggle="tooltip" data-placement="bottom" title="If you are not completely satisfied with your cleaning, we will come back and re-clean it for free!">learn more</font>
+			<p>满意的服务保证</p>
+			<font class="poptip" data-toggle="tooltip" data-placement="bottom" title="如果您对我们的服务不满意，我们会免费为您重新打扫。">更多</font>
 		</li>
 		<li>
 			<img src="/static/img/f2.png" alt="feature" />
-			<p>Professionally Trained and Certified Cleaners</p>
-			<font class="poptip" data-toggle="tooltip" data-placement="bottom" title="Every Merry Cleaner goes through an extensive training program to proudly wear the uniform">learn more</font>
+			<p>专业的清洁人员</p>
+			<font class="poptip" data-toggle="tooltip" data-placement="bottom" title="每一位阿姨均经过专业系统的培训后才成为清洁超人。">更多</font>
 		</li>
 		<li>
 			<img src="/static/img/f4.png" alt="feature" />
-			<p>Trust & Safety</p>
-			<font class="poptip" data-toggle="tooltip" data-placement="bottom" title="All Merry Cleaners are background checked for your safety and peace of mind.">learn more</font>
+			<p>安全保障，值得信赖</p>
+			<font class="poptip" data-toggle="tooltip" data-placement="bottom" title="清洁超人经过严格背景调查以保证您的隐私和财物安全。">更多</font>
 			<div class="bpop" id="bpop-ts">
 				<span class="b-close">x</span>
 				<div class="b-content"></div>
@@ -70,7 +70,7 @@
 		</li>
 		<li>
 			<img src="/static/img/f5.png" alt="feature" />
-			<p>English-Speaking Customer Service</p>
+			<p>中英文客服</p>
 		</li>
 	</ul>
 </div>
@@ -78,38 +78,38 @@
 	<ul>
 		<li>
 			<img src="/static/img/i1.png" alt="info" />
-			<p>1. BOOK</p>
-			<font>Tell us when you want to clean your home</font>
+			<p>1. 预订</p>
+			<font>确定清洁时间</font>
 		</li>
 		<li>
 			<img src="/static/img/i2.png" alt="info" />
-			<p>2. CLEAN</p>
-			<font>Certified Merry Cleaner cleans your place</font>
+			<p>2. 清洁</p>
+			<font>超人为您服务</font>
 		</li>
 		<li>
 			<img src="/static/img/i3.png" alt="info" />
-			<p>3. ENJOY</p>
-			<font>Enjoy your sparkling, clean home</font>
+			<p>3. 悦享</p>
+			<font>悦享清洁体验</font>
 		</li>
 	</ul>
 	<div id="wi">
-		<a class="btn btn-contrast btn-large home-wi popdown" id='include'>WHAT'S INCLUDED?</a>
+		<a class="btn btn-contrast btn-large home-wi popdown" id='include'>包含服务</a>
 			<div class="bpop" id="bpop-include">
 				<span class="b-close">x</span>
 				<div class="b-content">
-					<h4 class="space-border">What's Included in the Cleaning?</h4>
+					<h4 class="space-border">清洁服务里包含什么？</h4>
 					<table>
 						<tr>
 							<td valign="top">
-								<p class="big-font">Bedroom</p>
+								<p class="big-font">卧室</p>
 								<ol>
-									<li>Beds made</li>
-									<li>Clothes folded</li>
-									<li>Furniture & surfaces wiped and dusted</li>
-									<li>Items organized</li>
-									<li>Floors mopped</li>
-									<li>Window wiped (inside within reachable limit)</li>
-									<li>Trash emptied</li>
+									<li>整理床铺</li>
+									<li>折叠衣物</li>
+									<li>家具电器除尘</li>
+									<li>物品整理归纳</li>
+									<li>地面除尘拖洗</li>
+									<li>玻璃除尘（内部可触及）</li>
+									<li>垃圾清理</li>
 								</ol>
 							</td>
 							<td>
@@ -121,32 +121,32 @@
 								<img src="/static/img/in2.png">
 							</td>
 							<td valign="top">
-								<p class="big-font">Bathroom</p>
+								<p class="big-font">浴室</p>
 								<ol>
-									<li>Shower & bathtub rinsed and wiped</li>
-									<li>Countertops wiped</li>
-									<li>Toilets cleaned</li>
-									<li>Sinks, faucets, and fixtures wiped</li>
-									<li>Mirrors cleaned</li>
-									<li>Items organized</li>
-									<li>Floors mopped</li>
-									<li>Window wiped (inside within reachable limit)</li>
-									<li>Trash emptied</li>
+									<li>花洒、浴缸擦洗</li>
+									<li>洗手台擦洗</li>
+									<li>马桶清洗</li>
+									<li>水槽、水龙头擦洗</li>
+									<li>镜子擦拭</li>
+									<li>物品整理归纳</li>
+									<li>地面除尘拖洗</li>
+									<li>玻璃除尘（内部可触及）</li>
+									<li>垃圾清理</li>
 								</ol>
 							</td>
 						</tr>
 						<tr>
 							<td valign="top">
-								<p class="big-font">Kitchen</p>
+								<p class="big-font">厨房</p>
 								<ol>
-									<li>Dishes washed</li>
-									<li>Cabinet exteriors wiped</li>
-									<li>Countertops and backsplash wiped</li>
-									<li>Sinks, faucets, and fixtures wiped</li>
-									<li>Items organized</li>
-									<li>Floors mopped</li>
-									<li>Window wiped (inside within reachable limit)</li>
-									<li>Trash emptied</li>
+									<li>餐具厨具清洗</li>
+									<li>橱柜表面除尘</li>
+									<li>台面炉灶清洗</li>
+									<li>水槽、水龙头擦洗</li>
+									<li>物品归纳整理</li>
+									<li>地面除尘拖洗</li>
+									<li>玻璃除尘（内部可触及）</li>
+									<li>垃圾清理</li>
 								</ol>
 							</td>
 							<td>
@@ -158,39 +158,39 @@
 								<img src="/static/img/in4.png">
 							</td>
 							<td valign="top">
-								<p class="big-font">Other Areas</p>
+								<p class="big-font">其他区域</p>
 								<ol>
-									<li>Furniture & surfaces wiped and dusted</li>
-									<li>Items organized</li>
-									<li>Floors mopped</li>
-									<li>Window wiped (inside within reachable limit)</li>
-									<li>Trash emptied</li>
+									<li>家具电器除尘</li>
+									<li>物品归纳整理</li>
+									<li>地面除尘拖洗</li>
+									<li>玻璃除尘（内部可触及）</li>
+									<li>垃圾清理</li>
 								</ol>
 							</td>
 						</tr>
 					</table>
-					<center><h4>Special Requirements</h4>(upon request only)</center>
+					<center><h4>特别要求</h4></center>
 					<ol>
-						<li>Refrigerator inside cleaned</li>
-						<li>Clothes hand washed</li>
-						<li>Clothes ironed</li>
+						<li>冰箱内部擦洗</li>
+						<li>手洗衣物</li>
+						<li>熨烫衣物</li>
 					</ol>
 					<h4 class="space-border"></h4>
-					<center><h4>Services NOT Included</h4></center>
-					<em>Due to insurance liability, safety constraints and other considerations we do not offer the following:</em>
+					<center><h4>不包含服务</h4></center>
+					<em>出于责任保险，安全约束和其他因素，我们不提供以下服务：</em>
 					<ul>
-						<li>Deep stain removal</li>
-						<li>Dusting and/or vacuuming of ceilings/windows/surfaces outside of normal reach</li>
-						<li>Cleaning outside the windows</li>
-						<li>Cleaning pet messes</li>
-						<li>Carpet cleaning</li>
-						<li>Steam cleaning</li>
-						<li>Extermination (insects, etc)</li>
-						<li>Cleaning of mold and biohazardous meterial</li>
-						<li>Landscaping</li>
-						<li>Yardwork</li>
-						<li>Garage</li>
-						<li>Patios</li>
+						<li>深入污垢的清洗</li>
+						<li>即便能正常触及，但是天花板和天窗不负责清洗</li>
+						<li>外玻璃清洗</li>
+						<li>清洁宠物粪便</li>
+						<li>地毯清洁</li>
+						<li>蒸汽清洁</li>
+						<li>消灭昆虫等（如蟑螂）</li>
+						<li>清洁有危害和发霉的物质</li>
+						<li>景观物品</li>
+						<li>庭院</li>
+						<li>车库</li>
+						<li>露台</li>
 					</ul>
 				</div>
 			</div>
@@ -203,23 +203,14 @@
 $('.date-box').val('{{ default_date }}');
 var timeNow = new Date();
 var hourAllow = timeNow.getHours()+5;
-var hourNow = timeNow.getHours();
 var changeDay = timeNow.toDateString().split(' ')[2];
 var dayNow = $('.date-box').val().split(' ')[0];
 
-//if( hourAllow>19 || hourAllow<8 ){
-//	var timeAllow = '08:00';
-//}else{
-//	var timeAllow = hourAllow.toString()+':00';
-//};
-
-if (hourNow>18 || hourNow<9){
-	var timeAllow = '12:00';
-}else if (hourNow>=15 && hourNow<=18){
+if( hourAllow>19 || hourAllow<8 ){
 	var timeAllow = '08:00';
 }else{
 	var timeAllow = hourAllow.toString()+':00';
-}
+};
 
 $('.time-box').datetimepicker({
 	datepicker:false,
