--- a/ms/static/css/accounts.css
+++ b/ms/static/css/accounts.css
@@ -284,3 +284,44 @@ h3 {
 	font-weight: bold;
 	margin-bottom:8px;
 }
+.confirm-pop{
+	background-color: #FFF;
+	color: #111;
+	display: none;
+	padding: 12px;
+}
+.confirm-close {
+	border-radius: 0;
+	font: bold 20px arial;
+	padding: 0 6px 2px;
+	position: absolute;
+	right: 0px;
+	top: 0px;
+	color: gray;
+	cursor: pointer;
+	display: inline-block;
+	text-align: center;
+	text-decoration: none;
+	background-color: #fff;
+}
+.confirm-content{
+	width: 620px;
+}
+#confirm-top{
+	text-align:center;
+	margin-top: 20px;
+	margin-bottom: 30px;
+	font-weight:normal;
+	color:#000;
+	border:0;
+	padding:0;
+}
+.confirm-content h4{
+	text-align:center;
+	font-size:22px;
+	font-weight:bold;
+	margin-bottom: 25px;
+}
+.confirm-content ol li{
+	padding:5px 0;
+}
