--- a/ms/userena/templates/userena/base_userena.html
+++ b/ms/userena/templates/userena/base_userena.html
@@ -15,14 +15,23 @@
 $('.date-box').val('{{ default_date }}');
 var timeNow = new Date();
 var hourAllow = timeNow.getHours()+5;
+var hourNow = timeNow.getHours();
 var changeDay = timeNow.toDateString().split(' ')[2];
 var dayNow = $('.date-box').val().split(' ')[0];
 
-if( hourAllow>19 || hourAllow<8 ){
+//if( hourAllow>19 || hourAllow<8 ){
+//var timeAllow = '08:00';
+//}else{
+//var timeAllow = hourAllow.toString()+':00';
+//};
+
+if (hourNow>18 || hourNow<9){
+	var timeAllow = '12:00';
+}else if (hourNow>=15 && hourNow<=18){
 	var timeAllow = '08:00';
 }else{
 	var timeAllow = hourAllow.toString()+':00';
-};
+}
 
 $('.time-box').datetimepicker({
 	datepicker:false,
