--- a/ms/templates/booking/history.html
+++ b/ms/templates/booking/history.html
@@ -27,21 +27,29 @@
 	<h4>Upcoming Bookings</h4>
 	<table cellspacing="0" cellpadding="0">
 		<tr>
+			<th width="10%">Frequency</th>
 			<th width="15%">Date</th>
 			<th width="10%">Time</th>
 			<th width="10%">Hours</th>
-			<th width="15%">Ayi</th>
+			<th width="10%">Ayi</th>
 			<th width="15%">Status</th>
 			<th width="10%">Cancel</th>
 			<th width="10%">Change</th>
-			<th width="15%">Rating</th>
+			<th width="10%">Rating</th>
 		</tr>
 		{% for one in booking_list %}
 		<tr>
-			<td width="15%">{{ one.clean_time|date:"M d, Y" }}</td>
+			<td width="10%">{{ one.get_book_type_display }}</th>
+			<td width="15%">
+			{% if one.book_type == 1 %}
+			{{ one.clean_time|date:"M d, Y" }}
+			{% else %}
+			{{ one.clean_time|date:"l" }}
+			{% endif %}
+			</td>
 			<td width="10%">{{ one.clean_time|date:"h:i A" }}</td>
 			<td width="10%">{{ one.hour }}</td>
-			<td width="15%">
+			<td width="10%">
 			{% if one.clean_ayi %}
 			{{ one.clean_ayi }}
 			{% else %}
@@ -57,28 +65,36 @@
 			{% endifequal %}
 			</td>
 			<td width="10%"><a class="poptip" data-toggle="tooltip" data-placement="top" title="Change the booking? Call 021-6380-1553">Change</a></td>
-			<td width="15%"><a class="poptip" data-toggle="tooltip" data-placement="top" title="Not available yet">1 to 10</a></td>
+			<td width="10%"><a class="poptip" data-toggle="tooltip" data-placement="top" title="Not available yet">1 to 10</a></td>
 		</tr>
 		{% endfor %}
 	</table>
 	<h4>Past Bookings</h4>
 	<table cellspacing="0" cellpadding="0">
 		<tr>
+			<th width="10%">Frequency</th>
 			<th width="15%">Date</th>
 			<th width="10%">Time</th>
 			<th width="10%">Hours</th>
-			<th width="15%">Ayi</th>
+			<th width="10%">Ayi</th>
 			<th width="15%">Status</th>
 			<th width="10%">Cancel</th>
 			<th width="10%">Change</th>
-			<th width="15%">Rating</th>
+			<th width="10%">Rating</th>
 		</tr>
 		{% for one in booking_pass %}
 		<tr>
-			<td width="15%">{{ one.clean_time|date:"M d, Y" }}</td>
+			<td width="10%">{{ one.get_book_type_display }}</th>
+			<td width="15%">
+			{% if one.book_type == 1 %}
+			{{ one.clean_time|date:"M d, Y" }}
+			{% else %}
+			{{ one.clean_time|date:"l" }}
+			{% endif %}
+			</td>
 			<td width="10%">{{ one.clean_time|date:"h:i A" }}</td>
 			<td width="10%">{{ one.hour }}</td>
-			<td width="15%">
+			<td width="10%">
 			{% if one.clean_ayi %}
 			{{ one.clean_ayi }}
 			{% else %}
@@ -90,7 +106,7 @@
 			Cancel
 			</td>
 			<td width="10%">Change</td>
-			<td width="15%"><a class="poptip" data-toggle="tooltip" data-placement="top" title="Not available yet">1 to 10</a></td>
+			<td width="10%"><a class="poptip" data-toggle="tooltip" data-placement="top" title="Not available yet">1 to 10</a></td>
 		</tr>
 		{% endfor %}
 	</table>
