--- a/ms/templates/home/index.html
+++ b/ms/templates/home/index.html
@@ -39,7 +39,10 @@
 	      			<span class="input-group-addon glyphicon glyphicon-time"></span>
       			</div>
       			<div class="input-group time-div">
-	      			<input type="text" class="type-box" readonly="readonly" value="One Time">
+	      			<select class="type-box" name="clean_type">
+	      				<option value="1">One Time</option>
+	      				<option value="2">Weekly</option>
+	      			</select>
       			</div>
             	<button id="clean-book" type="submit">BOOK NOW</button>
             </form>
